{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 29,
  "lineage": "0d7e3046-0580-b968-6e74-f31f5ecf115a",
  "resources": [
    {
      "module": "module.Subnetfrontend",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.7.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/frontendsnet1",
            "name": "frontendsnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Oberoi1RG",
            "virtual_network_name": "oberoivnet"
          },
          "dependencies": [
            "module.resource_groeup.azurerm_resource_group.RG",
            "module.virtualnetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.backendsnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/backendnet1",
            "name": "backendnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Oberoi1RG",
            "virtual_network_name": "oberoivnet"
          },
          "dependencies": [
            "module.resource_groeup.azurerm_resource_group.RG",
            "module.virtualnetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.frontendvm9",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/publicIPAddresses/frontend9pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "70.153.81.255",
            "ip_version": "IPv4",
            "location": "indonesiacentral",
            "name": "frontend9pip",
            "resource_group_name": "Oberoi1RG",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.frontendvm9",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.7.0/24",
            "address_prefixes": [
              "10.0.7.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/frontendsnet1",
            "name": "frontendsnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Oberoi1RG",
            "virtual_network_name": "oberoivnet"
          }
        }
      ]
    },
    {
      "module": "module.frontendvm9",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/networkInterfaces/nicfrontend9",
            "internal_domain_name_suffix": "ux0om1zdw0pedglbppkc5e4bnh.jktx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "infra-frontend-nic",
                "primary": true,
                "private_ip_address": "10.0.7.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/publicIPAddresses/frontend9pip",
                "subnet_id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/frontendsnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "indonesiacentral",
            "name": "nicfrontend9",
            "private_ip_address": "10.0.7.4",
            "private_ip_addresses": [
              "10.0.7.4"
            ],
            "resource_group_name": "Oberoi1RG"
          },
          "dependencies": [
            "module.Subnetfrontend.azurerm_subnet.subnet",
            "module.frontendvm9.data.azurerm_public_ip.pip",
            "module.frontendvm9.data.azurerm_subnet.subnet",
            "module.key_vault.azurerm_key_vault.keyvault",
            "module.key_vault.data.azurerm_client_config.current",
            "module.keyvaultsecret1.azurerm_key_vault_secret.Secret",
            "module.keyvaultsecret1.data.azurerm_key_vault.keyvault",
            "module.keyvaultsecret2.azurerm_key_vault_secret.Secret",
            "module.keyvaultsecret2.data.azurerm_key_vault.keyvault",
            "module.network_security_group.azurerm_network_security_group.nsg",
            "module.publicipfront.azurerm_public_ip.pip",
            "module.resource_groeup.azurerm_resource_group.RG",
            "module.virtualnetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/networkSecurityGroups/frontendnsg",
            "location": "indonesiacentral",
            "name": "frontendnsg",
            "resource_group_name": "Oberoi1RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "20",
                  "80"
                ],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Subnetfrontend.azurerm_subnet.subnet",
            "module.resource_groeup.azurerm_resource_group.RG",
            "module.virtualnetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_securitybackend_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/networkSecurityGroups/backendnsg",
            "location": "indonesiacentral",
            "name": "backendnsg",
            "resource_group_name": "Oberoi1RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "20",
                  "80"
                ],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backendsnet.azurerm_subnet.subnet",
            "module.resource_groeup.azurerm_resource_group.RG",
            "module.virtualnetwork.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.publicipback",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/publicIPAddresses/backend9pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "70.153.81.250",
            "ip_version": "IPv4",
            "location": "indonesiacentral",
            "name": "backend9pip",
            "resource_group_name": "Oberoi1RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_groeup.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.publicipfront",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/publicIPAddresses/frontend9pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "70.153.81.255",
            "ip_version": "IPv4",
            "location": "indonesiacentral",
            "name": "frontend9pip",
            "resource_group_name": "Oberoi1RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_groeup.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.virtualnetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6fe6f4a5-b623-419e-9961-7bd42f93c16f",
            "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet",
            "location": "indonesiacentral",
            "name": "oberoivnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Oberoi1RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.6.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/backendnet1",
                "name": "backendnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.7.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4a8882d8-040a-43b9-81c8-844e324752c0/resourceGroups/Oberoi1RG/providers/Microsoft.Network/virtualNetworks/oberoivnet/subnets/frontendsnet1",
                "name": "frontendsnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.resource_groeup.azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}